@@ -339,6 +339,9 @@ C-API
 Library
 -------
 
+- Issue #8464: tarfile no longer creates files with execute permissions set
+  when mode="w|" is used.
+
 - Issue #7834: Fix connect() of Bluetooth L2CAP sockets with recent versions
   of the Linux kernel.  Patch by Yaniv Aknin.
 
